--- a/app/src/main/res/layout/activity_user_info.xml
+++ b/app/src/main/res/layout/activity_user_info.xml
@@ -17,20 +17,20 @@
         <RelativeLayout
             android:id="@+id/rl_user_head"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="60dp"
             android:layout_marginTop="3dp"
             android:background="@color/bg_white"
             android:padding="10dp">
 
             <TextView
-                style="@style/NormalTextView"
+                style="@style/RegularTextView"
                 android:layout_centerVertical="true"
                 android:text="个人头像"/>
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/customer_image"
-                android:layout_width="36dp"
-                android:layout_height="36dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="15dp"
                 android:src="@drawable/touxiang"/>
@@ -52,12 +52,12 @@
         <RelativeLayout
             android:id="@+id/rl_user_name"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="45dp"
             android:background="@color/bg_white"
             android:padding="10dp">
 
             <TextView
-                style="@style/NormalTextView"
+                style="@style/RegularTextView"
                 android:layout_centerVertical="true"
                 android:text="用户名"/>
 
@@ -78,12 +78,12 @@
         <RelativeLayout
             android:id="@+id/rl_user_sex"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="45dp"
             android:background="@color/bg_white"
             android:padding="10dp">
 
             <TextView
-                style="@style/NormalTextView"
+                style="@style/RegularTextView"
                 android:layout_centerVertical="true"
                 android:text="性别"/>
 
@@ -113,15 +113,22 @@
         <RelativeLayout
             android:id="@+id/rl_user_birth"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="45dp"
             android:background="@color/bg_white"
             android:padding="10dp">
 
             <TextView
-                style="@style/NormalTextView"
+                style="@style/RegularTextView"
                 android:layout_centerVertical="true"
                 android:text="出生日期"/>
 
+            <TextView
+                android:id="@+id/tv_user_birth"
+                style="@style/NormalTextView"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="15dp"
+                android:text="1994-08-24"/>
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
