--- a/app/src/main/res/layout/fragment_shopcar_item_good.xml
+++ b/app/src/main/res/layout/fragment_shopcar_item_good.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="120dp"
                 android:background="@color/bg_white">
 
     <View
@@ -10,25 +10,25 @@
         android:background="@color/colorLine"/>
 
     <TextView
+        android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="12dp"
         android:layout_marginTop="12dp"
         android:text="[促销]满19：00得赠品，赠完为止"
-        android:textSize="@dimen/tv_light"
-        android:id="@+id/textView3"/>
+        android:textSize="@dimen/tv_light"/>
 
 
     <CheckBox
         android:id="@+id/good_checkbox"
         android:layout_width="20dp"
         android:layout_height="20dp"
-        android:background="@drawable/checkbox_selector"
-        android:button="@null"
         android:layout_alignBaseline="@+id/tv_good_spec"
         android:layout_alignBottom="@+id/tv_good_spec"
         android:layout_alignLeft="@+id/textView3"
-        android:layout_alignStart="@+id/textView3"/>
+        android:layout_alignStart="@+id/textView3"
+        android:background="@drawable/checkbox_selector"
+        android:button="@null"/>
 
     <LinearLayout
         android:id="@+id/ll_good_img"
@@ -68,12 +68,10 @@
     <TextView
         android:id="@+id/tv_good_price"
         style="@style/GoodsPriceTextView"
-
         android:layout_below="@+id/tv_good_spec"
         android:layout_marginBottom="15dp"
         android:layout_marginLeft="6dp"
         android:layout_marginTop="17dp"
-
         android:layout_toRightOf="@+id/ll_good_img"
         android:text="￥：2099.00"/>
 
@@ -82,9 +80,10 @@
         layout="@layout/view_add_and_minus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tv_good_spec"
-        android:layout_alignRight="@+id/tv_good_name"
-        android:layout_alignEnd="@+id/tv_good_name"/>
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="10dp"
+        android:layout_marginRight="10dp"/>
 
 
 </RelativeLayout>
