--- a/app/src/main/res/layout/view_header_tv_tv.xml
+++ b/app/src/main/res/layout/view_header_tv_tv.xml
@@ -36,14 +36,12 @@
             android:layout_centerInParent="true"
             />
 
-        <ImageView
-            android:id="@+id/iv_header_right"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
+        <TextView
+            android:id="@+id/tv_header_right"
+            style="@style/RegularTextView"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:layout_marginRight="40px"
-            android:background="@drawable/act_home_msg_de"/>
+            android:layout_marginRight="40px"/>
 
 
     </RelativeLayout>
