--- a/app/src/main/res/layout/view_header_tv_msg.xml
+++ b/app/src/main/res/layout/view_header_tv_msg.xml
@@ -3,7 +3,7 @@
 <android.support.v7.widget.Toolbar
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/msg_toolbar"
+    android:id="@+id/toolbar_iv"
     android:layout_width="match_parent"
     android:layout_height="45dp"
     android:background="@color/colorPrimary"
