--- a/xframe/src/main/res/layout/xloading_loading_view.xml
+++ b/xframe/src/main/res/layout/xloading_loading_view.xml
@@ -7,5 +7,6 @@
         style="@style/Widget.AppCompat.ProgressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:indeterminateDrawable="@drawable/progressbar"
         android:layout_centerInParent="true"/>
 </RelativeLayout>
