--- a/app/src/main/res/layout/fragment_reg.xml
+++ b/app/src/main/res/layout/fragment_reg.xml
@@ -6,13 +6,13 @@
               android:gravity="center_horizontal"
               android:orientation="vertical">
 
-    <include layout="@layout/fragment_order_header"/>
+    <include layout="@layout/view_header_tv_tv"/>
 
     <View style="@style/NoramLine"/>
 
     <ImageView
-        android:layout_width="85dp"
-        android:layout_height="85dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="20dp"
         android:background="@drawable/mine_logo"/>
@@ -20,49 +20,40 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="30dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginLeft="45dp"
         android:layout_marginRight="45dp"
-        android:layout_marginTop="80px"
+        android:layout_marginTop="30dp"
         android:background="@drawable/button__n_bg"
         android:orientation="horizontal">
 
         <ImageView
-            android:layout_width="16dp"
-            android:layout_height="16dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="16dp"
             android:background="@drawable/ic_login_name"/>
 
         <View
             android:layout_width="2px"
-            android:layout_height="25dp"
+            android:layout_height="15dp"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="10dp"
             android:background="@color/colorPrimary"/>
 
-        <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <AutoCompleteTextView
-                android:id="@+id/email"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@null"
-                android:hint="请输入用户名"
-                android:maxLines="1"
-                android:paddingLeft="10dp"
-                android:singleLine="true"
-                android:textSize="@dimen/tv_Regular"/>
-
-        </android.support.design.widget.TextInputLayout>
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="7dp"
+            android:layout_weight="1"
+            android:background="@null"
+            android:padding="3dp"/>
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="30dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginLeft="45dp"
         android:layout_marginRight="45dp"
@@ -71,67 +62,31 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:layout_width="50px"
-            android:layout_height="60px"
+            android:id="@+id/imageView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginLeft="50px"
+            android:layout_marginLeft="16dp"
             android:background="@drawable/ic_login_pws"/>
 
         <View
             android:layout_width="2px"
-            android:layout_height="77px"
+            android:layout_height="15dp"
             android:layout_gravity="center_vertical"
-            android:layout_marginLeft="30px"
+            android:layout_marginLeft="10dp"
             android:background="@color/colorPrimary"/>
 
-        <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="40dp">
+        <EditText
+            android:id="@+id/editText2"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="7dp"
+            android:layout_weight="1"
+            android:background="@null"
+            android:padding="3dp"/>
 
-
-            <EditText
-                android:id="@+id/password"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@null"
-                android:hint="输入密码"
-                android:imeActionId="@+id/login"
-                android:imeActionLabel="@string/action_sign_in_short"
-                android:imeOptions="actionUnspecified"
-                android:inputType="textPassword"
-                android:maxLines="1"
-                android:paddingLeft="10dp"
-                android:singleLine="true"
-                android:textSize="@dimen/tv_Regular"/>
-
-        </android.support.design.widget.TextInputLayout>
     </LinearLayout>
 
-    <RelativeLayout
-        android:layout_width="270dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="15dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="3dp"
-            android:text="@string/login_fast"
-            android:textColor="@color/colorPrimary"
-            android:textSize="@dimen/tv_Normal"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_gravity="right"
-            android:text="@string/forget_pass"
-            android:textColor="@color/colorPrimary"
-            android:textSize="@dimen/tv_Normal"/>
-
-    </RelativeLayout>
 
     <Button
         android:id="@+id/bt_login"
