--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -28,9 +28,9 @@
 
 
 
+    <dimen name="paper_padding">1dp</dimen>
 
-
-
+    <dimen name="paper_button_corner_radius">2dp</dimen>
     <dimen name="item_height">80dp</dimen>
     <dimen name="bottom">150px</dimen>
     <!-- Default screen margins, per the Android Design guidelines. -->
