--- a/xframe/src/main/res/layout/adapter_loading.xml
+++ b/xframe/src/main/res/layout/adapter_loading.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="@dimen/XFrame_spacing">
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:padding="@dimen/XFrame_spacing">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -15,7 +15,8 @@
             style="@style/Widget.AppCompat.ProgressBar"
             android:layout_width="@dimen/XFrame_progressbar_size"
             android:layout_height="@dimen/XFrame_progressbar_size"
-            android:layout_gravity="center_vertical"/>
+            android:layout_gravity="center_vertical"
+            android:indeterminateDrawable="@drawable/progressbar"/>
 
         <TextView
             android:id="@+id/adapter_loading_text"
@@ -25,7 +26,7 @@
             android:layout_marginLeft="@dimen/XFrame_spacing"
             android:text="努力加载中..."
             android:textColor="@color/XFrame_darker_gray"
-            android:textSize="@dimen/XFrame_text_size" />
+            android:textSize="@dimen/XFrame_text_size"/>
 
     </LinearLayout>
 
