--- a/app/src/main/res/layout/fragment_home_footer.xml
+++ b/app/src/main/res/layout/fragment_home_footer.xml
@@ -2,14 +2,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
+              android:background="@color/bg_gray"
               android:orientation="vertical">
 
-    <include layout="@layout/fragment_home_item_tab_title"/>
+    <include
+        layout="@layout/fragment_home_item_tab_title"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginTop="3dp"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_home_goods"
         android:layout_width="match_parent"
-        android:background="@color/colorLine"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:background="@color/colorLine"/>
 
 </LinearLayout>
