--- a/app/src/main/res/layout/activity_msg.xml
+++ b/app/src/main/res/layout/activity_msg.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
+              android:layout_height="match_parent"
               android:background="@color/bg_gray"
-              android:layout_height="match_parent">
+              android:orientation="vertical">
 
     <include layout="@layout/activity_msg_header"/>
 
