--- a/app/src/main/res/layout/fragment_band.xml
+++ b/app/src/main/res/layout/fragment_band.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:widget="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
+
               android:layout_height="match_parent"
               android:background="@color/bg_gray"
               android:orientation="vertical">
@@ -112,19 +114,20 @@
             android:layout_weight="1"
             android:background="@null"
             android:hint="请输入验证码"
-            android:maxLength="4"
             android:inputType="number"
+            android:maxLength="4"
             android:textColorHint="@color/tv_hint"
             android:textSize="@dimen/tv_Regular"/>
 
-        <Button
-            android:layout_width="80dp"
+        <com.xinyuan.xyshop.widget.PaperButton
+            android:id="@+id/pb_code"
+            android:layout_width="85dp"
             android:layout_height="30dp"
-            android:layout_marginLeft="2dp"
-            android:background="@drawable/bt_selected_fang"
-            android:text="获取验证码"
-            android:textColor="@color/bg_white"
-            android:textSize="@dimen/tv_Normal"/>
+            android:layout_gravity="center_vertical"
+            widget:paper_text="发送验证码"
+            widget:paper_text_color="@color/bg_white"
+            widget:paper_text_size="13sp"
+            />
 
 
     </LinearLayout>
