--- a/app/src/main/res/layout/fragment_follow.xml
+++ b/app/src/main/res/layout/fragment_follow.xml
@@ -6,9 +6,12 @@
               android:orientation="vertical">
 
     <include layout="@layout/view_header_tv_tv"/>
+
     <View
-       style="@style/LightLine"/>
-    <android.support.v7.widget.RecyclerView
+        style="@style/LightLine"/>
+
+
+    <com.yanzhenjie.recyclerview.swipe.SwipeMenuRecyclerView
         android:id="@+id/rv_follow"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
