--- a/app/src/main/res/layout/fragment_home_item_ad.xml
+++ b/app/src/main/res/layout/fragment_home_item_ad.xml
@@ -9,6 +9,7 @@
     android:layout_marginLeft="10dp"
     android:layout_marginRight="10dp"
     android:layout_marginTop="6dp"
+    android:background="@color/bg_gray"
     android:foreground="?android:attr/selectableItemBackground"
     card_view:cardCornerRadius="5dp"
     card_view:cardElevation="4dp"
