--- a/app/src/main/res/layout/fragment_home_item_category.xml
+++ b/app/src/main/res/layout/fragment_home_item_category.xml
@@ -3,9 +3,15 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/bg_gray"
     android:orientation="vertical">
 
-    <include layout="@layout/fragment_home_item_tab_title"/>
+    <include
+        layout="@layout/fragment_home_item_tab_title"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginTop="3dp"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="180dp"
