--- a/app/src/main/res/layout/fragment_home_item_tab2.xml
+++ b/app/src/main/res/layout/fragment_home_item_tab2.xml
@@ -3,10 +3,14 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/colorLine"
+    android:background="@color/bg_gray"
     android:orientation="vertical">
 
-    <include layout="@layout/fragment_home_item_tab_title"/>
+    <include
+        layout="@layout/fragment_home_item_tab_title"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginTop="3dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -18,23 +22,23 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_marginRight="1px"
-            android:scaleType="fitXY"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:scaleType="fitXY"/>
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"
             android:layout_marginLeft="1px"
+            android:layout_weight="1"
             android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/home_tab2_img2"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:scaleType="fitXY"
                 android:layout_marginBottom="1px"
-                android:layout_weight="1"/>
+                android:layout_weight="1"
+                android:scaleType="fitXY"/>
 
             <ImageView
                 android:id="@+id/home_tab2_img3"
