--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -44,6 +44,13 @@
                 android:layout_marginLeft="15dp"
                 android:background="@drawable/ic_login_name"/>
 
+            <View
+                android:layout_width="2px"
+                android:layout_height="20dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="10dp"
+                android:background="@color/colorPrimary"/>
+
             <com.xinyuan.xyshop.widget.EditTextWithDel
                 android:id="@+id/ed_username"
                 android:layout_width="match_parent"
@@ -58,12 +65,6 @@
                 android:textColorHint="@color/tv_hint"
                 android:textSize="13sp"/>
 
-            <View
-                android:layout_width="2px"
-                android:layout_height="20dp"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="10dp"
-                android:background="@color/colorPrimary"/>
 
         </LinearLayout>
 
@@ -195,18 +196,21 @@
         android:orientation="horizontal">
 
         <ImageView
+            android:id="@+id/iv_login_qq"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:background="@drawable/qq"/>
 
         <ImageView
+            android:id="@+id/iv_login_wechat"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:background="@drawable/weixin"/>
 
         <ImageView
+            android:id="@+id/iv_login_weibo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
