--- a/app/src/main/res/layout/fragment_msg_item.xml
+++ b/app/src/main/res/layout/fragment_msg_item.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                       android:layout_width="match_parent"
-                                       android:layout_height="wrap_content"
-                                       android:layout_margin="30px">
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:background="@color/bg_white"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:paddingTop="10dp">
 
     <ImageView
         android:id="@+id/store_img"
@@ -13,17 +16,17 @@
 
     <TextView
         android:id="@+id/tv_store_name"
-        style="@style/NormalTextView"
-        android:layout_marginLeft="30px"
-        android:layout_marginTop="40px"
+        style="@style/RegularTextView"
+        android:layout_marginLeft="10dp"
         android:layout_toRightOf="@id/store_img"
         android:text="梅子熟了"/>
 
     <TextView
-        style="@style/LightTextView"
+        android:id="@+id/tv_msg_content"
+        style="@style/NormalTextView"
         android:layout_below="@id/tv_store_name"
-        android:layout_marginLeft="30px"
-        android:layout_marginTop="50px"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="20dp"
         android:layout_toRightOf="@id/store_img"
         android:text="亲，我们这边已经发货了哦，你那边注意查···"
         android:textColor="@color/tv_hint"/>
@@ -31,15 +34,12 @@
     <TextView
         style="@style/LightTextView"
         android:layout_alignParentRight="true"
-        android:layout_marginLeft="30px"
-        android:layout_marginTop="40px"
         android:text="2017/03/24"
         android:textColor="@color/tv_hint"/>
 
     <View
-        android:layout_width="match_parent"
-        android:layout_height="1px"
-        android:layout_marginTop="255px"
-        android:background="@color/colorLine"/>
+        style="@style/XYLine"
+        android:layout_alignParentBottom="true"
+        />
 
 </RelativeLayout>
