--- a/app/src/main/res/layout/fragment_cart_item_recome.xml
+++ b/app/src/main/res/layout/fragment_cart_item_recome.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                     android:layout_width="match_parent"
-                                     android:layout_height="wrap_content"
-                                     android:layout_marginBottom="10px"
-                                     android:layout_marginTop="10px"
-                                     android:orientation="vertical" >
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:layout_marginBottom="10px"
+              android:layout_marginTop="5dp"
+              android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -30,12 +31,12 @@
     </LinearLayout>
 
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_recomm"
+    <com.google.android.flexbox.FlexboxLayout
+        android:id="@+id/fl_goods"
         android:layout_width="match_parent"
-        android:focusable="false"
-        android:focusableInTouchMode="false"
-        android:layout_height="wrap_content"/>
-
+        android:layout_height="wrap_content"
+        android:scrollbars="none"
+        app:alignContent="flex_start"
+        app:flexWrap="wrap"></com.google.android.flexbox.FlexboxLayout>
 
 </LinearLayout>
