--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -20,7 +20,7 @@
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="2dp"
         android:layout_gravity="bottom"
         android:layout_marginBottom="55dp"
         android:background="@drawable/actionbar_shadow_up"/>
