--- a/app/src/main/res/layout/fragment_user_info.xml
+++ b/app/src/main/res/layout/fragment_user_info.xml
@@ -7,10 +7,12 @@
 
     <include layout="@layout/view_header_tv_msg"/>
 
+    <View
+        style="@style/LightLine"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="3dp"
         android:background="@color/bg_white"
         android:orientation="vertical">
 
@@ -24,10 +26,10 @@
 
             <TextView
                 style="@style/RegularTextView"
-                android:text="个人头像"
-                android:layout_centerVertical="true"
                 android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"/>
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:text="个人头像"/>
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/customer_image"
